[FIX] mail: improve chat bubble style
Before this commit, chat bubble style was not looking great
when there was some content below. This is mostly due to 2
issues: too much spacing, and lack of borders on floating items.

This commit makes the following improvements:

1. Reduced spacing between chat bubbles.
2. Stronger borders on floating items (chat bubble preview,
   hidden bubble menu, options)
2. Improved hover effect on chat bubbles and close buttons
3. Improved position of im status / counter / close button
4. More spacing between chat bubbles and floating items
   (message preview, hidden bubble menu)
5. Counter is more rounded when single digit
6. Floating items are less rounded
7. Remove some shadow (was making it look dirty rather than
   emphasis from background, which borders and spacing are more
   effective)

Also make the following improvements:
- Compact button was showing an empty dropdown content
- Hidden/compact button uses theme-specific primary color
- Make option items more readable (text was too bold)
- Badge counter are no longer user selectable

--- a/addons/mail/static/src/core/common/core.scss
+++ b/addons/mail/static/src/core/common/core.scss
@@ -14,6 +14,9 @@
     --o-discuss-badge-bg: #{$o-success}; // sync with --o-navbar-badge-bg
     color: white !important;
     background-color: var(--o-discuss-badge-bg) !important;
+    align-items: center;
+    justify-content: center;
+    min-width: 2.1ch;
 
     &.o-muted {
         --o-discuss-badge-bg: #{$gray-400};
@@ -28,6 +31,7 @@
     display: flex;
     transform: translate(0, 0) !important; // cancel systray style on badge
     font-size: .78572 * $font-size-base !important; // roughly 11px, small but readable
+    user-select: none;
 }
 
 .o-min-height-0 {
